@@ -1,7 +1,6 @@
 # List of source files containing translatable strings.
 # Please keep this file sorted alphabetically.
 [encoding: UTF-8]
-data/gnome-commander.desktop.in.in
 libgcmd/gnome-cmd-string-dialog.c
 plugins/cvs/cvs-plugin.c
 plugins/cvs/interface.c
