@@ -1,0 +1,2 @@
+data/gnome-commander.desktop.in
+data/gnome-commander.desktop.in.in
